# memryzed

./: .gitignore  .script-deploy.sh  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  glama.json  install-commands.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: Cargo.toml  README.md
benchmarks/results/: longmemeval-s.json
benchmarks/src/: dataset.rs  main.rs  runner.rs
crates/memryzed-cli/: Cargo.toml
crates/memryzed-cli/assets/: default-config.toml
crates/memryzed-cli/src/: cli.rs  exit.rs  main.rs
crates/memryzed-cli/src/commands/: config.rs  data.rs  doctor.rs  forget.rs  hooks.rs  init.rs  install.rs  list.rs  log.rs  mine.rs  mod.rs  reindex.rs  remember.rs  review.rs  search.rs  serve.rs  sessions.rs  show.rs  update.rs  watch.rs
crates/memryzed-cli/tests/: cli.rs
crates/memryzed-core/: Cargo.toml  build.rs
crates/memryzed-core/c/: glibc_compat.c
crates/memryzed-core/migrations/: 001_initial.sql  002_embeddings.sql  003_fts.sql  004_sessions.sql  005_episodes.sql  006_episode_dedup.sql
crates/memryzed-core/src/: audit.rs  clock.rs  engine.rs  episodes.rs  error.rs  export.rs  extractor.rs  hooks.rs  id.rs  integrations.rs  lib.rs  paths.rs  redact.rs  retrieval.rs  sessions.rs  update.rs  version.rs
crates/memryzed-core/src/embedder/: fastembed.rs  mod.rs  noop.rs
crates/memryzed-core/src/extractor/: mod.rs  ollama.rs
crates/memryzed-core/src/memory/: kind.rs  mod.rs  scope.rs  status.rs
crates/memryzed-core/src/mining/: mod.rs  source.rs
crates/memryzed-core/src/projects/: identity.rs  mod.rs
crates/memryzed-core/src/storage/: migrations.rs  mod.rs
crates/memryzed-mcp/: Cargo.toml
crates/memryzed-mcp/src/: lib.rs
crates/memryzed-tui/: Cargo.toml
crates/memryzed-tui/src/: lib.rs
docs/: README.md  architecture.md  cli-reference.md  concepts.md  configuration.md  data-model.md  faq.md  for-agent-authors.md  getting-started.md  mcp-reference.md  roadmap.md  troubleshooting.md
docs/development/: README.md  branching.md  changelog-conventions.md  incident-response.md  release-process.md  setup.md  status.md  testing.md  versioning.md
docs/specs/: benchmarks.md  v1.md
