[package]
name = "memryzed-benchmarks"
description = "Quality benchmark harness for Memryzed retrieval."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "memryzed-bench"
path = "src/main.rs"

[dependencies]
memryzed-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
