[package]
name = "memryzed-core"
description = "Core library for Memryzed: storage, retrieval, sessions, extractor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
directories.workspace = true
rusqlite.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
