[package]
name = "memryzed-tui"
description = "TUI for reviewing pending memories in Memryzed."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
memryzed-core.workspace = true
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
